test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/assign_to_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[45]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  int
  identifier(arr2)
  [
  const int(3)
  ]
  =
  {
  const int(4)
  ,
  const int(5)
  ,
  const int(6)
  }
  ;
  identifier(arr)
  =
  identifier(arr2)
  ;
  return
  identifier(arr)
  [
  const int(0)
  ]
  ;
  }
